JumpScript/tests/baselines/reference/parserMissingToken2.errors.txt
tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken2.jump(1,2): error TS1161: Unterminated regular expression literal.


==== tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken2.jump (1 errors) ====
    / b;
     
!!! error TS1161: Unterminated regular expression literal.